services/karakeep/deployment-meilisearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meilisearch
  template:
    metadata:
      labels:
        app: meilisearch
    spec:
      containers:
      - env:
        - name: MEILI_NO_ANALYTICS
          value: "true"
        image: getmeili/meilisearch:v1.54.0
        imagePullPolicy: IfNotPresent
        name: meilisearch
        volumeMounts:
        - mountPath: /meili_data
          name: meilisearch
      dnsPolicy: ClusterFirst
      volumes:
      - name: meilisearch
        persistentVolumeClaim:
          claimName: meilisearch-pvc
