services/karakeep/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karakeep-web
  template:
    metadata:
      labels:
        app: karakeep-web
    spec:
      containers:
      - env:
        - name: MEILI_ADDR
          value: http://meilisearch:7700
        - name: BROWSER_WEB_URL
          value: http://chrome:9222
        - name: DATA_DIR
          value: /data
        image: ghcr.io/karakeep-app/karakeep:release
        imagePullPolicy: Always
        name: web
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: data
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data-pvc
