services/karakeep/service-chrome.yaml
apiVersion: v1
kind: Service
metadata:
  name: chrome
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 9222
    protocol: TCP
    targetPort: 9222
  selector:
    app: chrome
  type: ClusterIP
