services/karakeep/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: karakeep-web
  type: ClusterIP
