services/karakeep/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: karakeep
spec:
  parentRefs:
    - name: envoy
      namespace: default
  hostnames:
    - keep.erebe.eu
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web
          port: 3000
